<?xml version="1.0"?>
<package format="2">
  <name>uw-slam</name>
  <version>0.0.0</version>
  <description>SLAM for monocular underwater vehicle</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fabmoraleshidalgo@gmail.com">Fabio Morales</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>message_generation</depend>
  <depend>image_transportation</depend>  
  <depend>cv_bridge</depend>  
  <exec_depend>message_runtime</exec_depend>
  
</package>
